--- a/Pet-Pickup/angular.json
+++ b/Pet-Pickup/angular.json
@@ -24,7 +24,7 @@
             ],
             "styles": [
               {
-                "input": "./node_modules/@angular/material/prebuilt-themes/deeppurple-amber.css"
+                "input": "src/custom-theme.scss"
               },
               "src/styles.css"
             ],
@@ -82,7 +82,7 @@
             "tsConfig": "src/tsconfig.spec.json",
             "karmaConfig": "src/karma.conf.js",
             "styles": [
-              "./node_modules/@angular/material/prebuilt-themes/deeppurple-amber.css",
+              "src/theme.scss",
               "src/styles.css",
               "../node_modules/font-awesome/css/font-awesome.css"
             ],
