--- a/Pet-Pickup/package.json
+++ b/Pet-Pickup/package.json
@@ -27,6 +27,7 @@
     "bootstrap": "^4.3.1",
     "core-js": "^2.5.4",
     "express": "^4.16.4",
+    "express-promise-router": "^3.0.3",
     "font-awesome": "^4.7.0",
     "hammerjs": "^2.0.8",
     "pg": "^7.9.0",
