--- a/Pet-Pickup/package.json
+++ b/Pet-Pickup/package.json
@@ -24,6 +24,7 @@
     "@angular/platform-browser-dynamic": "~7.1.0",
     "@angular/router": "~7.1.0",
     "angular-font-awesome": "^3.1.2",
+    "body-parser": "^1.18.3",
     "bootstrap": "^4.3.1",
     "core-js": "^2.5.4",
     "express": "^4.16.4",
