--- a/Pet-Pickup/package.json
+++ b/Pet-Pickup/package.json
@@ -32,6 +32,7 @@
     "express-promise-router": "^3.0.3",
     "font-awesome": "^4.7.0",
     "hammerjs": "^2.0.8",
+    "jsonwebtoken": "^8.5.1",
     "pg": "^7.9.0",
     "rxjs": "~6.3.3",
     "tslib": "^1.9.0",
