--- a/Pet-Pickup/package.json
+++ b/Pet-Pickup/package.json
@@ -25,6 +25,7 @@
     "@angular/router": "~7.1.0",
     "angular-font-awesome": "^3.1.2",
     "bcrypt": "^3.0.6",
+    "bcryptjs": "^2.4.3",
     "body-parser": "^1.18.3",
     "bootstrap": "^4.3.1",
     "core-js": "^2.5.4",
